feat(plugin): rename plugin and pluginconfig CRDs
